--- a/css/style.css
+++ b/css/style.css
@@ -99,10 +99,10 @@ body {
     height: 389px;
     background-color: #fff;
     border-radius: 50%;
-    background-image: url('../img/P81028-140213.jpg');
+    background-image: url('../img/avatar.jpg');
     background-repeat: no-repeat;
     background-position: center top -80px;
-    border: 11px solid #fff;
+    border: 6px solid #fff;
 }
 
 
